# thermal-governor

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: release.yml
src/: main.rs
