[package]
name = "thermal-governor"
version = "0.1.0"
edition = "2021"
description = "Dynamic auto-tuning thermal governor for Linux laptops with aggressive fan curves"
license = "MIT"
repository = "https://github.com/glutamatt/thermal-governor"
keywords = ["thermal", "cpu", "governor", "thinkpad", "linux"]
categories = ["hardware-support"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
